--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
     <version>1.0</version>
     <modules>
         <module>springbatch</module>
+        <module>springjpa</module>
     </modules>
 
     <parent>
